--- a/work/sort-later/sources/sort-later.css
+++ b/work/sort-later/sources/sort-later.css
@@ -56,40 +56,6 @@ kbd {
     }
 }
 
-/* .sortlater-center{
-    display: block;
-    position: relative;
-
-    aspect-ratio: 1800 / 1125;
-    max-width: 100%;
-}
-
-.sortlater-center:hover{
-    background-color: rgba(0, 0, 0, 0);
-} */
-
-/* #sortlaterweb{
-    aspect-ratio: 1800 / 1125;
-} */
-
-/* .sortlater-scroll-container{
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    inset: auto 0 0 0;
-
-    aspect-ratio: 1800 / 1046;
-    width: 100%;
-
-    clip-path: polygon(0% 0%, 97% 0%, 97% 47%, 100% 53%, 100% 100%, 0% 100%);
-    mix-blend-mode: multiply;
-} */
-
-/* .sortlater-scroll{
-    width: 100%;
-    position: absolute;
-} */
-
 
 
 
@@ -104,7 +70,7 @@ kbd {
     justify-content: center;
 
 
-    
+
     > div{
         width: 100%;
         max-width: calc(var(--in-width) - 2rem);
@@ -119,30 +85,6 @@ kbd {
         display: block;
     }
 }
-
-/* .centroid{
-    grid-column: 1 / 9;
-    display: flex;
-    justify-content: center;
-}
-
-.video-container{
-    width: 100%;
-    max-width: calc(var(--in-width) - 2rem);
-} */
-
-/* .video-container div{
-    aspect-ratio: 1920 / 1080;
-} */
-
-/* .video-link:hover{
-    background-color: rgba(0, 0, 0, 0);
-} */
-
-/* .sortlater-video{
-    width: 100%;
-    display: block;
-} */
 
 
 
